# conformer_ocr

./: README.rst  setup.cfg
conformer_ocr/: codec.py  dataset.py  default_specs.py  lightning_utils.py  model.py  pred.py  tiles.py  tune.py
conformer_ocr/cli/: __init__.py  pred.py  test.py  train.py
conformer_ocr/conformer/: convolution.py  encoder.py  feed_forward.py  modules.py
