[metadata]
name = conformer_ocr
author = Benjamin Kiessling
author_email = mittagessen@l.unchti.me
summary = foo
home_page = http://kraken.re
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache
classifier =
        Environment :: Console
        Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
keywords =
    htr

[files]
packages = conformer_ocr

[entry_points]
console_scripts =
    cocr = conformer_ocr.cli:cli

[flake8]
max_line_length = 160
exclude = tests/*

[options]
python_requires = >=3.9
install_requires =
    kraken>=4.3.13
    click>=7.0
    numpy
    Pillow>=6.2.2
    scipy
    torchvision>=0.15
    torch~=2.0.1
    shapely
    pytorch-lightning
    rich
